# openglGame

./: .clangd  CMakeLists.txt  readme.md
.cache/clangd/index/: game.cpp.CAE2D4D5AACEF8F0.idx  game.h.861AA3D594D8BF4C.idx  input.cpp.651BDAE69E9401F5.idx  input.h.4667BB2A5F34576B.idx  main.cpp.5018B0CCB577E675.idx  main.h.ED56443A61845C9C.idx  renderer.cpp.626EEFED46DFED8A.idx  renderer.h.C4D0F944365B59B0.idx
include/: constants.h  main.h
include/game/: game.h  input.h
include/game/renderer/: model.h  renderer.h  shader.h
lib/GLAD/include/glad/: glad.h
lib/GLAD/src/: glad.c
linuxScripts/: linuxBuild.sh  updateShaders.sh
res/shaders/: default.frag  default.vert
src/: main.cpp
src/game/: game.cpp  input.cpp
src/game/renderer/: model.cpp  renderer.cpp  shader.cpp
